--- a/wiki/TaggingTelephone.wiki
+++ b/wiki/TaggingTelephone.wiki
@@ -12,16 +12,21 @@ The [http://microformats.org/wiki/hcard#adr_tel_email_types hCard specification]
 tel:type=value
 }}}
 
+Where:
+
+*type* is one of home, msg, work, pref, fax, cell, video, pager, bbs, modem, car isdn, pcs 
+*value* is the telephone number, in [http://en.wikipedia.org/wiki/E.123 E.123] format.
+
 For example:
 
 {{{
-tel:work=+19028922556
+tel:work=+1 902 892 2556
 }}}
 
 This would be equivalent to the hCard construct:
 
 {{{
 <div class="tel">
-   <span class="type">Work</span> +19028922556
+   <span class="type">Work</span> +1 902 892 2556
 </div>
 }}}
