--- a/wiki/TaggingTelephone.wiki
+++ b/wiki/TaggingTelephone.wiki
@@ -20,7 +20,7 @@ Where:
 For example:
 
 {{{
-tel:work=+1 902 892 2556
+tel:work="+1 902 892 2556"
 }}}
 
 This would be equivalent to the hCard construct:
