Edited wiki page through web user interface.

--- a/wiki/MachineTags.wiki
+++ b/wiki/MachineTags.wiki
@@ -12,6 +12,7 @@ Machine tags can be used with Plazes in two ways:
 
 === Tagging Plazes ===
 
+ * TaggingWifi
  * TaggingTelephone
 
 ==== Photographs ===
