--- a/wiki/MachineTags.wiki
+++ b/wiki/MachineTags.wiki
@@ -12,7 +12,7 @@ Machine tags can be used with Plazes in two ways:
 
 === Tagging Plazes ===
 
- * TaggingWifi
+ * TaggingInternet
  * TaggingTelephone
 
 ==== Photographs ===
