Edited wiki page through web user interface.

--- a/wiki/maemoplazer.wiki
+++ b/wiki/maemoplazer.wiki
@@ -1,8 +1,12 @@
-#summary A Plazer for the Nokia 810 and related devices.
+#summary A Plazer for the Nokia 800 and related devices.
 
 == Description ==
 
-The maemoplazer application runs on the [http://www.nseries.com/products/n800/ Nokia N800].
+The maemoplazer application runs on Maemo-based devices like the [http://www.nseries.com/products/n800/ Nokia N800].
+
+From the [https://garage.maemo.org/plugins/scmsvn/viewcvs.php/trunk/README.txt?root=maemoplazer&view=markup README]:
+
+ This is a Plazes geopositioning client for the Maemo platform. It can be used for connecting WiFi access points to physical locations using the Plazes database. If you manage to discover a new Plaze, the tool will open a browser window into Plazes where you can input information about the new place.
 
 == Links ==
 
