--- a/wiki/ThirdPartyApps.wiki
+++ b/wiki/ThirdPartyApps.wiki
@@ -7,7 +7,10 @@ A _Plazer_ is a tool that updates your Plazes geopresence information.
  * [maemoplazer] -- for devices like the Nokia N800.
  * [PythonS60Plazer] -- for devices like the Nokia N95.
  * [iPlazer] -- for the iPhone and iPod Touch.
- * [http://code.google.com/p/twaiku/ Twaiku] -- for Quicksilver.
+
+==== Need Updating ====
+
+ * [http://code.google.com/p/twaiku/ Twaiku] -- for Quicksilver (uses the deprecated Plazes API)
 
 == Republishing ==
 
