--- a/wiki/CodeWrappers.wiki
+++ b/wiki/CodeWrappers.wiki
@@ -14,4 +14,4 @@ These are wrappers around the Plazes API that offer ease of use in various progr
 
 == Ruby ==
 
- * ActiveResource based wrapper. Coming very soon (first half of April 08, beat me with a soft bat if I don't hold this promise -til)
+ * ActiveResource based wrapper. Coming very soon (first half of April 08 -til)
