Edited wiki page through web user interface.

--- a/wiki/ThirdPartyApps.wiki
+++ b/wiki/ThirdPartyApps.wiki
@@ -1,4 +1,4 @@
-#summary A gallery of third-party applications that uses the Plazes API.
+#summary A gallery of third-party applications that use the Plazes API.
 
 == Plazers ==
 
