Edited wiki page through web user interface.

--- a/wiki/Graphics.wiki
+++ b/wiki/Graphics.wiki
@@ -1,3 +1,7 @@
 #summary Graphics useful for developers.
 
 == Category Icons ==
+
+There are 22 categories of Plazes (airport, bar, cinema, etc.) and each one has an icon associated with it.  These icons are available as PNG and GIF images, in two sizes (24x24 and 40x40):
+
+ * [http://plazes.googlecode.com/files/PlazesCategoryIcons.zip PlazesCategoryIcons.zip]
