Edited wiki page through web user interface.

--- a/wiki/FindingMACAddress.wiki
+++ b/wiki/FindingMACAddress.wiki
@@ -30,4 +30,6 @@ $SED "s/^\(.\):/0\1:/" | \
 $SED "s/:\(.\):/:0\1:/g" | \
 $SED "s/:\(.\):/:0\1:/g" | \
 $SED "s/:\(.\)$/:0\1/"`
+
+echo "MAC Address is : $MACADDRESS_CONVERTED"
 }}}
