Edited wiki page through web user interface.

--- a/wiki/FindingMACAddress.wiki
+++ b/wiki/FindingMACAddress.wiki
@@ -34,7 +34,7 @@ $SED "s/:\(.\)$/:0\1/"`
 echo "MAC Address is : $MACADDRESS"
 }}}
 
-== RedHat Enterprise Linux ==
+== Redhat Enterprise Linux ==
 
 {{{
 #!/bin/bash
