--- a/wiki/FindingMACAddress.wiki
+++ b/wiki/FindingMACAddress.wiki
@@ -58,3 +58,42 @@ $SED 'y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/'`
 
 echo "MAC Address is : $MACADDRESS"
 }}}
+
+== Windows ==
+
+The following VBScript is perhaps a somewhat inelegant way of getting the MAC address of the default gateway under Windows.  I'm not enough of a Windows user to know whether this is the best way, nor to know which versions of Windows it supports (I've tested with Windows XP.  I welcome suggestions for alternatives.
+
+{{{
+Set WMI=GetObject("winmgmts:\\.\root\cimv2")
+Set WshShell= WScript.CreateObject("WScript.Shell")
+
+set objNetworkAdapters = WMI.ExecQuery ("SELECT * FROM Win32_NetworkAdapterConfiguration WHERE IPEnabled=TRUE")
+for Each objAdapter in objNetworkAdapters
+  if not isnull(objAdapter.DefaultIPGateway ) Then
+    strGateway = join(objAdapter.DefaultIPGateway, ",")
+  end if
+Next
+
+Set WshArp = WshShell.Exec("arp -a " & strGateway)
+strArpResult = WshArp.StdOut.ReadAll
+
+Set RegEx = New RegExp
+RegEx.IgnoreCase = True
+RegEx.Global = True
+RegEx.Pattern = "[0-9A-F]{2}-[0-9A-F]{2}-[0-9A-F]{2}-[0-9A-F]{2}-[0-9A-F]{2}-[0-9A-F]{2}"
+
+If Regex.Test(strArpResult) = True then
+  Set Matches = RegEx.Execute(strArpResult)
+  For each Match in Matches
+    if not Match = "00-00-00-00-00-00" Then
+      Wscript.StdOut.Write Match
+    End If
+  Next
+End if
+}}}
+
+To use this script, save as a text file called, for example, *mac.vbs* and then execute from the Windows command line with:
+
+{{{
+cscript //Nologo mac.vbs
+}}}
