Edited wiki page through web user interface.

--- a/wiki/CodeWrappers.wiki
+++ b/wiki/CodeWrappers.wiki
@@ -14,7 +14,7 @@ These are wrappers around the Plazes API that offer ease of use in various progr
 
 == Ruby ==
 
- * ActiveResource based wrapper. Coming very soon (first half of April 08 -til)
+ * ActiveResource based wrapper. Coming soon (tm)
 
 == Shell Scripts ==
 
