--- a/wiki/ThirdPartyApps.wiki
+++ b/wiki/ThirdPartyApps.wiki
@@ -9,6 +9,7 @@ A _Plazer_ is a tool that updates your Plazes geopresence information.
  * [iPlazer] -- for the iPhone and iPod Touch.
  * [http://tinyplazer.com TinyPlazer] -- a web app for mobile devices
  * [http://code.google.com/p/plazes/source/browse/trunk/plazer_ruby_activeresource/plazer.rb plazer_ruby_activeresource] -- A simple commandline plazer
+ * [FirePlazer] -- a Firefox extension that's a Plazer.
 
 ==== Need Updating ====
 
